overflow safari fix

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -35,6 +35,7 @@
 html {
     width: 100vw;
     max-width: 100vw;
+    position: relative;
     overflow-x: hidden;
 }
 
